--- a/css/level2.css
+++ b/css/level2.css
@@ -1,10 +1,11 @@
 #container-level1_2 {
   position: relative;
+  /*top: 50px;*/
   width: 100%;
-  height: 100%;
+  height: 80%;
 }
 
-.scale {
+#container-level1_2 .scale {
   position: absolute;
   user-select: none;
   user-drag: none;
@@ -14,7 +15,7 @@
   text-align: center;
 }
 
-.scale img {
+#container-level1_2 .scale img {
   user-select: none;
   user-drag: none;
   -webkit-user-drag: none;
@@ -22,7 +23,7 @@
   height: auto;
 }
 
-.number {
+#container-level1_2 .number {
   transition: opacity 0.5s ease-out;
   position: absolute;
   top: 10%;
@@ -31,9 +32,10 @@
   padding: 10px;
   animation: float 5s linear infinite;
   user-select: none;
+  z-index: 0;
 }
 
-.drop-zone {
+#container-level1_2 .drop-zone {
   user-select: none;
   user-drag: none;
   position: absolute;
@@ -50,7 +52,7 @@
   text-align: center;
 }
 
-.target-number {
+#container-level1_2 .target-number {
   user-select: none;
   user-drag: none;
   position: absolute;
@@ -64,30 +66,34 @@
   text-align: center;
 }
 
-#left-container {
+#container-level1_2 #left-container {
 
   top: 50%;
   left: 10%;
   transform: translateY(-50%);
 }
 
-#right-container {
+#container-level1_2 #right-container {
   top: 50%;
   right: 10%;
   transform: translateY(-50%);
 }
 
-#number-container-level1_2 {
-  height: 100%;
+#container-level1_2 #number-container-level1_2 {
+  /*height: 100%;*/
+  max-height: 80%;
+  overflow: hidden;
 }
 
-.info {
+
+
+#container-level1_2 .info {
   user-select: none;
 }
 
-#timer {
+#container-level1_2 #timer {
   position: absolute;
-
+  top: -50px;
   font-size: 3em;
   color: #2a2a2a;
   padding: 10px;
@@ -95,3 +101,20 @@
   user-select: none;
 }
 
+#container-level1_2 .timer-container {
+  position: absolute;
+}
+
+#container-level1_2 .counter-container {
+  font-size: 16px;
+  display: inline-flex;
+  margin: 10px;
+}
+
+#container-level1_2 .counter-text {
+  margin-right: 10px;
+}
+
+#container-level1_2 .left-number-counter {
+
+}
