--- a/css/startpage.css
+++ b/css/startpage.css
@@ -1,12 +1,58 @@
+@font-face {
+  font-family: 'Shantell Sans';
+  src: url('../fonts/ShantellSans-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Keania One';
+  src: url('../fonts/KeaniaOne-Regular.ttf') format('truetype');
+}
+
 #body-game {
-  font-family: Arial, sans-serif;
+  font-family: "Shantell Sans", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 75vh;
+  height: calc(100vh - 120px);
   margin: 0;
   background-color: #f4f4f9;
+  background-image:radial-gradient(circle, transparent, rgba(0, 0, 0, 0.2)), url("../img/ariphmeticbackground.jpg") ;
+  background-repeat: no-repeat, repeat;
+  background-size: cover, 300px 300px;
+  background-position: 0 0;
+  animation: moveBackground 120s linear infinite;
 }
+
+@keyframes moveBackground {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 200% 200%;
+  }
+}
+
+.animated-btn {
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.animated-btn:hover {
+  background-color: #000cd1 !important;
+  transform: scale(1.05);
+}
+
+
+#name-icon {
+  color: gray;
+}
+
+body, #body-game {
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   text-align: center;
   background: white;
@@ -14,14 +60,36 @@
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-#username-input {
+
+#userinput-container {
+  min-width: 350px;
+  min-height: 200px;
+}
+
+@keyframes redBorderFlash {
+  0% {
+    border: 2px solid transparent;
+  }
+  50% {
+    border: 2px solid red;
+  }
+  100% {
+    border: 2px solid transparent;
+  }
+}
+
+.red-border-flash {
+  animation: redBorderFlash 1s ease-in-out;
+}
+
+#username-input, #nav-input {
   width: 80%;
   padding: 10px;
   margin: 10px 0;
   border: 1px solid #ddd;
   border-radius: 4px;
 }
-#leader-btn, #start-btn, #leader-back-btn {
+#leader-btn, #start-btn, #leader-back-btn, #jump-to-script {
   padding: 10px 20px;
   background-color: #007BFF;
   color: white;
@@ -29,9 +97,6 @@
   border-radius: 4px;
   cursor: pointer;
   margin: 10px;
-}
-button:hover {
-  background-color: #0056b3;
 }
 a {
   text-decoration: none;
@@ -48,7 +113,7 @@ a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -59,26 +124,54 @@ a:hover {
   user-select: none;
 }
 
-.leaderboard-container {
+.leaderboard-table-container {
+  position: relative;
+  max-height: 400px;
   overflow-y: auto;
-  max-height: 300px;
-  min-width: 400px;
+  overflow-x: hidden;
 
+  /*outline: 1px solid #ddd;*/
+  padding-right: 10px;
 }
 
-#leader-container {
-  max-height: 80%;
+.leaderboard-table-container::-webkit-scrollbar, .hint-content::-webkit-scrollbar {
+  width: 8px;
+}
+
+.leaderboard-table-container::-webkit-scrollbar-track, .hint-content::-webkit-scrollbar-track {
+  background: #f3f3f3;
+  border-radius: 10px;
+}
+
+.leaderboard-table-container::-webkit-scrollbar-thumb, .hint-content::-webkit-scrollbar-thumb {
+  background: #cccaca;
+  border-radius: 10px;
+  border: 1px solid #f4f4f9;
+}
+
+.leaderboard-table-container::-webkit-scrollbar-thumb:hover, .hint-content::-webkit-scrollbar-thumb:hover {
+  background: #007BFF;
+}
+
+@-moz-document url-prefix() {
+  .leaderboard-table-container, .hint-content {
+    scrollbar-width: thin;
+    scrollbar-color: #007BFF #f4f4f9;
+  }
 }
 
 #leaderboard-table {
-  width: 90%;
-  min-width: 100px;
+  width: 100%;
+  min-width: 400px;
   border-collapse: collapse;
-  margin: 20px 0;
   font-size: 18px;
   text-align: left;
 }
 
+#leaderboard-table th, #leaderboard-table td {
+  padding: 12px 15px;
+  border: 1px solid #ddd;
+}
 
 #leaderboard-table th {
   background-color: #f2f2f2;
@@ -86,16 +179,87 @@ a:hover {
 }
 
 #leaderboard-table tr:nth-child(even) {
-  background-color: #f9f9f9;
+  background-color: #f3f3f3;
 }
+
+
 
 #leaderboard-table tr:hover {
-  background-color: #f1f1f1;
+  background-color: #eff1fb;
 }
 
-#leaderboard-table th, #leaderboard-table td {
-  padding: 5px 20px;
-  border: 1px solid #ddd;
-  font-size: 14px;
-  width: 30px;
+#navigate-test {
+  align-self: baseline;
+  position: absolute;
+  right: 10%;
+  display: none;
+  z-index: 1000;
+}
+
+
+.hidden {
+  display: none;
+}
+
+.keania-one-regular {
+  font-family: "Keania One", serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.info {
+  font-size: 30px;
+  font-family: "Keania One", serif;
+  display: inline-flex;
+  align-content: space-between;
+  width: 60%;
+  justify-content: space-between;
+  /*outline: 1px solid #ddd;*/
+}
+
+#left-weight, #right-weight {
+  min-width: 90px;
+}
+
+.hint-container {
+  position: absolute;
+  top: 130px;
+  right: 10px;
+  width: 200px;
+  max-width: 200px;
+  z-index: 1000;
+}
+
+.hint-content {
+  overflow: auto;
+  max-height: 50vh;
+}
+
+.hint-header {
+  font-weight: bold;
+  cursor: pointer;
+  list-style: none;
+  text-align: left;
+  user-select: none;
+  tab-index: none;
+  user-focus: none;
+}
+
+.hint-container summary::before {
+  font-family: serif;
+  content: "➤";
+  font-size: 1rem;
+  color: #333;
+  margin-right: 8px;
+  display: inline-block;
+  transform: rotate(90deg);
+  transition: transform 0.3s ease;
+}
+
+.hint-container[open] summary::before {
+  transform: rotate(0deg);
+}
+
+#range-slider {
+  user-select: none;
 }
